# Embedded-Portable-Assets

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.variables  README.md  build.bat  build.sh  main.c
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/check-branch-name/: action.yml  check_branch_name.py
.github/actions/test/: action.yml
.github/workflows/: c-cpp.yml  codacy_app.yml  codeql.yml  codeql_app.yml  devcontainer_update.yml  pull_request.yml  scheduled.yml  test_app.yml
Core/PLibs/LinkedList/: Wx_Static_LinkedList.c  Wx_Static_LinkedList.h
Core/PLibs/Queue/: Wx_Static_Queue.c  Wx_Static_Queue.h
Core/PLibs/Stack/: Wx_Static_Stack.c  Wx_Static_Stack.h
Core/Platform/: Wx_Compiler.h  Wx_CompilerCfg.h  Wx_Platform.h  Wx_StdTypes.h
ports/: CMakeLists.txt
software/: CMakeLists.txt
software/App/: CMakeLists.txt
software/App/core/: main.c
software/App/tools/CMake/: wxsdk_compile.cmake
software/Core/: CMakeLists.txt
software/Core/LinkedList/: CMakeLists.txt
software/Core/LinkedList/XOOLL/: Wx_Dynamic_LinkedList.c  Wx_Dynamic_LinkedList.h
software/Core/LinkedList/core/: Wx_OOLL.c  Wx_OOLL.h  Wx_Static_LinkedList.c  Wx_Static_LinkedList.h
software/Core/LinkedList/tests/unit/: test_linkedlist.c
software/Core/LinkedList/tests/unit/test_runners/: test_main.c  test_runner.c
software/Core/LinkedList/tools/CMake/: linkedlist_compile.cmake  linkedlist_test.cmake
software/Core/Math/: CMakeLists.txt
software/Core/Math/core/: Wx_Math.c  Wx_Math.h
software/Core/Math/tests/unit/: test_math.c
software/Core/Math/tests/unit/test_runners/: test_main.c  test_runner.c
software/Core/Math/tools/CMake/: math_compile.cmake  math_test.cmake
software/Core/Node/: CMakeLists.txt
software/Core/Node/core/: Wx_Static_Node.c  Wx_Static_Node.h
software/Core/Node/tests/unit/: test_node.c
software/Core/Node/tests/unit/test_runners/: test_main.c  test_runner.c
software/Core/Node/tools/CMake/: node_compile.cmake  node_test.cmake
software/Core/Queue/: CMakeLists.txt
software/Core/Queue/core/: Wx_Static_Queue.c  Wx_Static_Queue.h
software/Core/Queue/tests/unit/: test_queue.c
software/Core/Queue/tests/unit/test_runners/: test_main.c  test_runner.c
software/Core/Queue/tools/CMake/: queue_compile.cmake  queue_test.cmake
software/Core/Stack/: CMakeLists.txt
software/Core/Stack/core/: Wx_Static_Stack.c  Wx_Static_Stack.h
software/Core/Stack/tests/unit/: test_stack.c
software/Core/Stack/tests/unit/test_runners/: test_main.c  test_runner.c
software/Core/Stack/tools/CMake/: stack_compile.cmake  stack_test.cmake
software/Platform/: Wx_Assert.h  Wx_Compiler.h  Wx_CompilerCfg.h  Wx_EHor.h  Wx_Macros.h  Wx_Platform.h  Wx_SpecialTypes.h  Wx_StdTypes.h  Wx_Wrappers.h
